@@ -35,6 +35,7 @@ max_queue_length = 5
 
 album_cover_path = /home/stefan/.cache/rhythmbox/covers/
 auto_queue = false
+show_cover_art = true
 #cache_cover_art = true
 #auto_queue_genre = Comedy
 
